app-test/testdata/typesystem/neg/constant-global-variable-immutability/check/const.check
testdata/typesystem/neg/constant-global-variable-immutability/src/const.cal:5:13: error: Cannot assign to const variable a.
            a := a + 1; // error
            ^